# whisper-analysis

./: .gitignore  package.json  pnpm-lock.yaml  readme.md
candle-whisper/: Cargo.toml
candle-whisper/src/: audio.rs  lib.rs  logic.rs  main.rs
public/: worker.js
src/: App.tsx
