[package]
name = "candle-whisper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
rand = "0.8"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
wasm-bindgen = "0.2.87"

hound = "3.5.1"
num-traits = "0.2.5"
safetensors = "0.4.1"
candle-core = "0.5"
candle-nn = "0.5"
candle-transformers = "0.5"
tokenizers = { version = "0.19.1", default-features = false, features = [
  "unstable_wasm",
] }
